# Fake-News-Detection

./: .gitignore  STRUCTURE.md  pyproject.toml  requirements.txt
configs/: INDEX.md
configs/data/: README.md  common.yaml  gossipcop.yaml  pheme.yaml  politifact.yaml
configs/fusion/: README.md  ne.yaml  ne2c.yaml
configs/model/: README.md  head.yaml  transformer_context.yaml  transformer_entity.yaml  transformer_text.yaml
configs/train/: README.md  base.yaml  gossipcop_5fold.yaml  pheme_5fold.yaml  politifact_5fold.yaml
kan/: __init__.py
kan/data/: README.md  __init__.py  batcher.py  entity_linking.py  kg_fetcher.py  loaders.py  vectorizer.py
kan/interfaces/: README.md  __init__.py  encoders.py  kg.py  linker.py
kan/modules/: README.md  __init__.py  context_encoder.py  entity_encoder.py  head.py  text_encoder.py
kan/pipelines/: README.md  __init__.py  evaluate.py  prepare_data.py  train_accelerate.py  train_trainer.py
kan/utils/: README.md  __init__.py  logging.py  metrics.py  registry.py  seed.py
scripts/datasets/: README.md  acquire_datasets.py
tests/: test_kan_data_batcher.py  test_kan_data_entity_linking.py  test_kan_data_kg_fetcher.py  test_kan_data_loaders.py  test_kan_data_vectorizer.py  test_kan_modules_attention.py  test_kan_modules_context_encoder.py  test_kan_modules_entity_encoder.py  test_kan_modules_head.py  test_kan_modules_text_encoder.py  test_kan_pipelines_prepare_data.py  test_kan_pipelines_train_trainer.py  test_kan_utils_logging.py  test_kan_utils_metrics.py  test_kan_utils_registry.py  test_kan_utils_seed.py
(+16 files in other folders)
